@@ -1,21 +1,21 @@
 package edu.fiuba.algo3.testEntrega2.Pregunta;
 
+
+import edu.fiuba.algo3.modelo.Respuestas.RespuestasConcretas;
+
+import edu.fiuba.algo3.modelo.modificadores.Modificadores;
+
 import edu.fiuba.algo3.modelo.pregunta.Pregunta;
 import edu.fiuba.algo3.modelo.puntaje.Clasica;
-import edu.fiuba.algo3.modelo.respuesta.Respuesta;
-import edu.fiuba.algo3.modelo.opcion.estado.Correcta;
-import edu.fiuba.algo3.modelo.opcion.estado.Incorrecta;
 
 import edu.fiuba.algo3.modelo.jugador.Jugador;
-import edu.fiuba.algo3.modelo.modificador.ModificadorPuntaje;
-import edu.fiuba.algo3.modelo.modificador.Nulo;
-import edu.fiuba.algo3.modelo.opcion.Grupo;
-import edu.fiuba.algo3.modelo.opcion.Opcion;
+import edu.fiuba.algo3.modelo.modificadores.ModificadorPuntaje.ModificadorPuntaje;
 
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 
+import edu.fiuba.algo3.testEntrega2.mocks.GruposMock;
 import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -26,48 +26,40 @@ import edu.fiuba.algo3.modelo.pregunta.GroupChoice;
 public class GroupChoiceTest {
     private Jugador jugador1;
     private Jugador jugador2;
-    private Opcion opcion1Correcta;
-    private Opcion opcion2Correcta;
-    private Opcion opcion3Correcta;
-    private Opcion opcion1CorrectaSinValidar;
-    private Opcion opcion2CorrectaSinValidar;
-    private Opcion opcion3CorrectaSinValidar;
-    private Opcion opcion1Incorrecta;
-    private Opcion opcion2Incorrecta;
-    private Opcion opcion3Incorrecta;
+
+    static List<String> grupos;
+    static List<String> miembrosGrupo1;
+    static List<String> miembrosGrupo2;
     private static Clasica clasica;
-    private Grupo mamifero;
-    private Grupo pez;
-    private Grupo grupo3;
     private ModificadorPuntaje modificadorPuntaje;
     private List<ModificadorPuntaje> modificadores;
+    private GruposMock opcionesCorrectas;
+    private RespuestasConcretas respuestas;
 
     @BeforeAll
     public static void setUpClass() {
         clasica = new Clasica(3);
+        grupos = Arrays.asList("Mamifero", "Pez");
+        miembrosGrupo1 = Arrays.asList("Gato", "Perro");
+        miembrosGrupo2 = List.of("Tiburon");
+
     }
 
     @BeforeEach
     public void setUp() {
-        modificadorPuntaje = new Nulo();
-        modificadores = new ArrayList<>();
-        modificadores.add(modificadorPuntaje);
+        modificadores = Modificadores.obtenerListaModificadoresPuntaje();
+        modificadorPuntaje= modificadores.getFirst();
         jugador1 = new Jugador("Jugador 1", modificadores);
         jugador2 = new Jugador("Jugador 2", modificadores);
 
+        List<List<String>> miembrosPorGrupos=new ArrayList<>();
+        miembrosPorGrupos.add(miembrosGrupo1);
+        miembrosPorGrupos.add(miembrosGrupo2);
+        opcionesCorrectas=new GruposMock(grupos,miembrosPorGrupos);
 
 
-        opcion1Correcta = new Grupo("Gato", "Mamifero", new Correcta());
-        opcion2Correcta = new Grupo("Perro", "Mamifero", new Correcta());
-        opcion3Correcta = new Grupo("Tiburon", "Pez", new Correcta());
+        respuestas= new RespuestasConcretas();
 
-        opcion1CorrectaSinValidar = new Grupo("Gato", "Mamifero", new Incorrecta());
-        opcion2CorrectaSinValidar = new Grupo("Perro", "Mamifero", new Incorrecta());
-        opcion3CorrectaSinValidar = new Grupo("Tiburon", "Pez", new Incorrecta());
-
-        opcion1Incorrecta=new Grupo("Sapo", "Mamifero", new Incorrecta());
-        opcion2Incorrecta= new Grupo("Perro", "Pez", new Incorrecta());
-        opcion1Incorrecta=new Grupo("Gato", "Lagarto", new Incorrecta());
 
     }
 
@@ -75,19 +67,15 @@ public class GroupChoiceTest {
     @Test
     public void test01GroupChoiceAsignaPuntajeCorrectoAJugadorQueRespondeCorrectamente(){
         //Arrange
-        List<Opcion> opcionesPregunta = Arrays.asList(opcion1Correcta, opcion2Correcta, opcion3Correcta);
 
         Pregunta pregunta = new GroupChoice(
                 "Poner las siguientes preguntas en su grupo correspondiente",
-                opcionesPregunta,
+                opcionesCorrectas,
                 clasica,
                 "Animales"
         );
 
-
-        Respuesta respuesta2 = jugador2.responder(Arrays.asList(opcion1CorrectaSinValidar, opcion2CorrectaSinValidar, opcion3CorrectaSinValidar),opcionesPregunta, modificadorPuntaje);
-        List<Respuesta> respuestas = new ArrayList<>();
-        respuestas.add(respuesta2);
+        respuestas.agregar(opcionesCorrectas,jugador1, modificadorPuntaje);
 
         //Act
         pregunta.asignarPuntajes(respuestas);
@@ -99,18 +87,17 @@ public class GroupChoiceTest {
     @Test
     public void test02Asigna0PuntosAJugadorQueRespondeConUnaIncorrecta() {
         //Arrange
-        List<Opcion> opcionesPregunta = Arrays.asList(opcion1Correcta, opcion2Correcta, opcion3Correcta);
 
         Pregunta pregunta = new GroupChoice(
                 "Poner las siguientes preguntas en su grupo correspondiente",
-                opcionesPregunta,
+                opcionesCorrectas,
                 clasica,
                 "Animales"
         );
-        Respuesta respuesta1 = jugador1.responder(Arrays.asList(opcion2Incorrecta), opcionesPregunta, modificadorPuntaje);
 
-        List<Respuesta> respuestas = new ArrayList<>();
-        respuestas.add(respuesta1);
+        GruposMock opcionesJugador = opcionesCorrectas.crearCopiaMock(miembrosGrupo2, List.of(""));
+        respuestas.agregar(opcionesJugador,jugador1, modificadorPuntaje);
+
 
         //Act
         pregunta.asignarPuntajes(respuestas);
@@ -123,18 +110,15 @@ public class GroupChoiceTest {
     @Test
     public void test03Asigna0PuntosAJugadorQueRespondeConUnaIncorrectaYDosCorrectas() {
         //Arrange
-        List<Opcion> opcionesPregunta = Arrays.asList(opcion1Correcta, opcion2Correcta, opcion3Correcta);
 
-        Pregunta pregunta = new GroupChoice(
+         Pregunta pregunta = new GroupChoice(
                 "Poner las siguientes preguntas en su grupo correspondiente",
-                opcionesPregunta,
+                opcionesCorrectas,
                 clasica,
                 "Animales"
         );
-        Respuesta respuesta1 = jugador1.responder(Arrays.asList(opcion1Correcta,opcion2Incorrecta,opcion3Correcta), opcionesPregunta, modificadorPuntaje);
-
-        List<Respuesta> respuestas = new ArrayList<>();
-        respuestas.add(respuesta1);
+        GruposMock opcionesJugador = opcionesCorrectas.crearCopiaMock(miembrosGrupo1, List.of("Reja"));
+        respuestas.agregar(opcionesJugador,jugador1, modificadorPuntaje);
 
         //Act
         pregunta.asignarPuntajes(respuestas);
@@ -147,18 +131,17 @@ public class GroupChoiceTest {
     @Test
     public void test04Asigna0PuntosAJugadorQueRespondeConDosCorrectasSiendo3Opciones() {
         //Arrange
-        List<Opcion> opcionesPregunta = Arrays.asList(opcion1Correcta, opcion2Correcta, opcion3Correcta);
 
         Pregunta pregunta = new GroupChoice(
                 "Poner las siguientes preguntas en su grupo correspondiente",
-                opcionesPregunta,
+                opcionesCorrectas,
                 clasica,
                 "Animales"
         );
-        Respuesta respuesta1 = jugador1.responder(Arrays.asList(opcion1Correcta,opcion2Correcta), opcionesPregunta, modificadorPuntaje);
 
-        List<Respuesta> respuestas = new ArrayList<>();
-        respuestas.add(respuesta1);
+        GruposMock opcionesJugador = opcionesCorrectas.crearCopiaMock(List.of("Perro"), List.of("Tiburon"));
+        respuestas.agregar(opcionesJugador,jugador1, modificadorPuntaje);
+
 
         //Act
         pregunta.asignarPuntajes(respuestas);
