@@ -1,16 +1,20 @@
 package edu.fiuba.algo3.testEntrega2.Pregunta;
 
+import edu.fiuba.algo3.modelo.Respuestas.RespuestasConcretas;
+import edu.fiuba.algo3.modelo.modificadores.Modificadores;
+import edu.fiuba.algo3.modelo.opciones.Opciones;
+import edu.fiuba.algo3.modelo.opciones.Simples;
 import edu.fiuba.algo3.modelo.pregunta.Pregunta;
 import edu.fiuba.algo3.modelo.pregunta.VerdaderoFalso;
 import edu.fiuba.algo3.modelo.puntaje.Parcial;
-import edu.fiuba.algo3.modelo.respuesta.Respuesta;
-import edu.fiuba.algo3.modelo.opcion.estado.Correcta;
-import edu.fiuba.algo3.modelo.opcion.estado.Incorrecta;
+import edu.fiuba.algo3.modelo.Respuestas.respuesta.Respuesta;
+import edu.fiuba.algo3.modelo.opciones.opcion.estado.Correcta;
+import edu.fiuba.algo3.modelo.opciones.opcion.estado.Incorrecta;
 import edu.fiuba.algo3.modelo.jugador.Jugador;
-import edu.fiuba.algo3.modelo.modificador.ModificadorPuntaje;
-import edu.fiuba.algo3.modelo.modificador.Nulo;
-import edu.fiuba.algo3.modelo.opcion.Opcion;
-import edu.fiuba.algo3.modelo.opcion.Simple;
+import edu.fiuba.algo3.modelo.modificadores.ModificadorPuntaje.ModificadorPuntaje;
+import edu.fiuba.algo3.modelo.modificadores.ModificadorPuntaje.NuloPuntaje;
+import edu.fiuba.algo3.modelo.opciones.opcion.Opcion;
+import edu.fiuba.algo3.modelo.opciones.opcion.Simple;
 
 import java.util.ArrayList;
 import java.util.Arrays;
@@ -24,15 +28,11 @@ import static org.junit.jupiter.api.Assertions.assertEquals;
 public class MultipleChoiceTest {
     private Jugador jugador1;
     private Jugador jugador2;
-    private Opcion opcion1;
-    private Opcion opcion2;
-    private Opcion opcion3;
     private static Parcial parcial;
-    private Opcion opcion1Correcta;
-    private Opcion opcion2Correcta;
-    private Opcion opcion3Incorrecta;
-    private Nulo nulo;
+    private ModificadorPuntaje nulo;
     private List<ModificadorPuntaje> modificadores;
+    private Simples opciones;
+    private RespuestasConcretas respuestas;
 
     @BeforeAll
     public static void setUpClass() {
@@ -41,55 +41,57 @@ public class MultipleChoiceTest {
 
     @BeforeEach
     public void setUp() {
-        nulo = new Nulo();
-        modificadores = new ArrayList<>();
-        modificadores.add(nulo);
+        List<ModificadorPuntaje> modificadores= Modificadores.obtenerListaModificadoresPuntaje();
+
+        nulo = modificadores.getFirst();
+
         jugador1 = new Jugador("Jugador 1", modificadores);
         jugador2 = new Jugador("Jugador 2", modificadores);
-        opcion1 = new Simple("Opcion 1", new Incorrecta());
-        opcion2 = new Simple("Opcion 2", new Incorrecta());
-        opcion3 = new Simple("Opcion 3", new Incorrecta());
-        opcion1Correcta = new Simple("Opcion 1", new Correcta());
-        opcion2Correcta = new Simple("Opcion 2", new Correcta());
-        opcion3Incorrecta = new Simple("Opcion 3", new Incorrecta());
+
+        List<String> opcionesTexto= List.of("Opcion 1", "Opcion 2", "Opcion 3");
+        List<String> posicionesCorrectas= List.of("1", "2");
+
+        respuestas=new RespuestasConcretas();
+        opciones=new Simples(opcionesTexto,posicionesCorrectas);
+
     }
 
     @Test
-    public void test01MultipleChoiceParcialAsignaPuntajeCorrectoAJugadoreQueRespondioBien() {
+    public void test01Asigna2PuntosAUnJugadorQueRespondio2Correctas() {
 
-        List<Opcion> opcionesPregunta = Arrays.asList(opcion1Correcta, opcion2Correcta, opcion3Incorrecta);
 
         Pregunta pregunta = new VerdaderoFalso(
             "¿Cuáles de las siguientes opciones son opcionesPregunta?",
-                opcionesPregunta,       parcial, "Tema"
+                opciones,       parcial, "Tema"
         );
-        Respuesta correcta = jugador1.responder(Arrays.asList(opcion1, opcion2),opcionesPregunta, nulo);
 
-        List<Respuesta> opciones = new ArrayList<>();
-        opciones.add(correcta);
+        Opciones opcionesJugador=pregunta.crearCopiaOpciones(List.of("Opcion 1", "Opcion 2"));
+        respuestas.agregar(opcionesJugador,jugador1,nulo);
 
-        pregunta.asignarPuntajes(opciones);
+        //Act
+        pregunta.asignarPuntajes(respuestas);
 
+        //Assert
         assertEquals(2, jugador1.obtenerPuntaje());
     }
 
     @Test
-    public void test02MultipleChoiceParcialAsignaPuntajeCorrectoAJugadorQueRespondioMal() {
+    public void test02Asigna0PuntosAJugadorQueRespondioMal() {
 
-        List<Opcion> opcionesPregunta = Arrays.asList(opcion1Correcta, opcion2Correcta, opcion3Incorrecta);
 
         Pregunta pregunta = new VerdaderoFalso(
                 "¿Cuáles de las siguientes opciones son opcionesPregunta?",
-                opcionesPregunta,       parcial, "Tema"
+                opciones,       parcial, "Tema"
         );
 
-        Respuesta incorrecta = jugador2.responder(Arrays.asList(opcion1, opcion3),opcionesPregunta, nulo);
+        Opciones opcionesJugador=pregunta.crearCopiaOpciones(List.of("Opcion 1", "Opcion 3"));
+        respuestas.agregar(opcionesJugador,jugador1,nulo);
 
-        List<Respuesta> opciones = new ArrayList<>();
-        opciones.add(incorrecta);
+        //Act
+        pregunta.asignarPuntajes(respuestas);
 
-        pregunta.asignarPuntajes(opciones);
+        //Assert
+        assertEquals(0, jugador1.obtenerPuntaje());
 
-        assertEquals(0, jugador2.obtenerPuntaje());
     }
 }
