@@ -1,15 +1,19 @@
 package edu.fiuba.algo3.testEntrega2.Pregunta;
 
+import edu.fiuba.algo3.modelo.Respuestas.RespuestasConcretas;
+import edu.fiuba.algo3.modelo.modificadores.Modificadores;
+import edu.fiuba.algo3.modelo.opciones.Opciones;
+import edu.fiuba.algo3.modelo.opciones.Ordenadas;
 import edu.fiuba.algo3.modelo.pregunta.Pregunta;
 import edu.fiuba.algo3.modelo.puntaje.Clasica;
-import edu.fiuba.algo3.modelo.respuesta.Respuesta;
-import edu.fiuba.algo3.modelo.opcion.estado.Correcta;
-import edu.fiuba.algo3.modelo.opcion.estado.Incorrecta;
+import edu.fiuba.algo3.modelo.Respuestas.respuesta.Respuesta;
+import edu.fiuba.algo3.modelo.opciones.opcion.estado.Correcta;
+import edu.fiuba.algo3.modelo.opciones.opcion.estado.Incorrecta;
 import edu.fiuba.algo3.modelo.jugador.Jugador;
-import edu.fiuba.algo3.modelo.modificador.ModificadorPuntaje;
-import edu.fiuba.algo3.modelo.modificador.Nulo;
-import edu.fiuba.algo3.modelo.opcion.Opcion;
-import edu.fiuba.algo3.modelo.opcion.Ordenada;
+import edu.fiuba.algo3.modelo.modificadores.ModificadorPuntaje.ModificadorPuntaje;
+import edu.fiuba.algo3.modelo.modificadores.ModificadorPuntaje.NuloPuntaje;
+import edu.fiuba.algo3.modelo.opciones.opcion.Opcion;
+import edu.fiuba.algo3.modelo.opciones.opcion.Ordenada;
 
 import java.util.ArrayList;
 import java.util.Arrays;
@@ -23,66 +27,56 @@ import static org.junit.jupiter.api.Assertions.assertEquals;
 import edu.fiuba.algo3.modelo.pregunta.OrderedChoice;
 
 public class OrderedChoiceTest {
-    private Opcion opcion1Correcta;
-    private Opcion opcion2Correcta;
-    private Opcion opcion3Correcta;
-    private Opcion opcion1Incorrecta;
-    private Opcion opcion2Incorrecta;
-    private Opcion opcion3Incorrecta;
-    private Opcion opcion1CorrectaSinValidar;
-    private Opcion opcion2CorrectaSinValidar;
-    private Opcion opcion3CorrectaSinValidar;
+
 
     private Jugador jugador1;
     private Jugador jugador2;
     private static Clasica clasica;
     private static ModificadorPuntaje nulo;
-    private List<ModificadorPuntaje> modificadores;
+
+    private RespuestasConcretas respuestas;
+    private Ordenadas opciones;
 
     @BeforeAll
     public static void setUpClass() {
         clasica= new Clasica(3);
-        nulo=new Nulo();
+        nulo=new NuloPuntaje();
     }
 
     @BeforeEach
     public void setUp() {
-        modificadores = new ArrayList<>();
-        modificadores.add(nulo);
+
+        List<ModificadorPuntaje> modificadores= Modificadores.obtenerListaModificadoresPuntaje();
+
+        nulo = modificadores.getFirst();
+
         jugador1 = new Jugador("Jugador 1", modificadores);
         jugador2 = new Jugador("Jugador 2", modificadores);
 
+        List<String> opcionesTexto= List.of("Opcion 1", "Opcion 2", "Opcion 3");
+        List<String> ordenCorrecto = List.of("3", "2", "1");
 
-
-        opcion1Incorrecta = new Ordenada("Opcion 1",1, new Incorrecta());
-        opcion2Incorrecta = new Ordenada("Opcion 2",2, new Incorrecta());
-        opcion3Incorrecta = new Ordenada("Opcion 3",3, new Incorrecta());
-
-        opcion1CorrectaSinValidar = new Ordenada("Opcion 3",1, new Incorrecta());
-        opcion2CorrectaSinValidar = new Ordenada("Opcion 2",2, new Incorrecta());
-        opcion3CorrectaSinValidar = new Ordenada("Opcion 1",3, new Incorrecta());
-
-        opcion1Correcta = new Ordenada("Opcion 3", 1, new Correcta());
-        opcion2Correcta = new Ordenada("Opcion 2", 2, new Correcta());
-        opcion3Correcta = new Ordenada("Opcion 1", 3, new Correcta());
+        respuestas=new RespuestasConcretas();
+        opciones=new Ordenadas(opcionesTexto, ordenCorrecto);
     }
 
     @Test
     public void test01OrderedChoiceAsignaPuntajeCorrectoAJugadorQueRespondeCorrectamente(){
         //Arrange
-        List<Opcion> opcionesPregunta = Arrays.asList(opcion1Correcta, opcion2Correcta,opcion3Correcta);
 
         Pregunta pregunta = new OrderedChoice(
                 "Ordenar las siguientes opciones",
-                opcionesPregunta,
+                opciones,
                 clasica,
                 "Tema"
         );
 
-        Respuesta respuesta2 = jugador2.responder(Arrays.asList(opcion2CorrectaSinValidar, opcion1CorrectaSinValidar, opcion3CorrectaSinValidar),opcionesPregunta, nulo);
 
-        List<Respuesta> respuestas = new ArrayList<>();
-        respuestas.add(respuesta2);
+        Opciones opcionesJugador = pregunta.crearCopiaOpciones(List.of( "Opcion 3","Opcion 2", "Opcion 1"));
+        respuestas.agregar(opcionesJugador,jugador1,nulo);
+
+        //Act
+        pregunta.asignarPuntajes(respuestas);
 
         //Act
 
@@ -95,17 +89,16 @@ public class OrderedChoiceTest {
     @Test
     public void test02OrderedChoiceAsignaPuntajeCorrectoAJugadorQueRespondeIncorrectamente() {
         //Arrange
-        List<Opcion> opcionesPregunta = Arrays.asList(opcion1Correcta, opcion2Correcta,opcion3Correcta);
 
         Pregunta pregunta = new OrderedChoice(
                 "Ordenar las siguientes opciones",
-                opcionesPregunta,
+                opciones,
                 clasica,
                 "Tema"
         );
-        Respuesta correcta = jugador1.responder(Arrays.asList(opcion1Incorrecta, opcion2Incorrecta, opcion3Incorrecta),opcionesPregunta, nulo);
-        List<Respuesta> respuestas = new ArrayList<>();
-        respuestas.add(correcta);
+        
+        Opciones opcionesJugador = pregunta.crearCopiaOpciones(List.of( "Opcion 1","Opcion 2", "Opcion 3"));
+        respuestas.agregar(opcionesJugador,jugador1,nulo);
 
         //Act
         pregunta.asignarPuntajes(respuestas);
