@@ -1,11 +1,14 @@
 package edu.fiuba.algo3.testEntrega2.PuntajeTest;
 
-import edu.fiuba.algo3.modelo.opcion.Simple;
-import edu.fiuba.algo3.modelo.opcion.estado.Correcta;
-import edu.fiuba.algo3.modelo.opcion.estado.Incorrecta;
+import edu.fiuba.algo3.modelo.Respuestas.RespuestasConcretas;
+import edu.fiuba.algo3.modelo.opciones.Opciones;
+import edu.fiuba.algo3.modelo.opciones.Simples;
+import edu.fiuba.algo3.modelo.opciones.opcion.Simple;
+import edu.fiuba.algo3.modelo.opciones.opcion.estado.Correcta;
+import edu.fiuba.algo3.modelo.opciones.opcion.estado.Incorrecta;
 import edu.fiuba.algo3.modelo.puntaje.ConPenalidad;
 import edu.fiuba.algo3.modelo.puntaje.Puntaje;
-import edu.fiuba.algo3.modelo.respuesta.Respuesta;
+import edu.fiuba.algo3.modelo.Respuestas.respuesta.Respuesta;
 import edu.fiuba.algo3.testEntrega2.mocks.RespuestaMock;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -16,20 +19,19 @@ import java.util.List;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 
 public class PenalidadTest{
-    private Simple opcion1Correcta;
-    private Simple opcion2Correcta;
 
-    private Simple opcion1;
-    private Simple opcion2;
     private Puntaje conPenalidad;
+    private RespuestasConcretas respuestas;
+    private Simples opciones;
 
     @BeforeEach
     public void setUpClass() {
 
-        opcion1 = new Simple("Opcion 1", new Incorrecta());
-        opcion1Correcta = new Simple("Opcion 1", new Correcta());
-        opcion2 = new Simple("Opcion 2", new Incorrecta());
-        opcion2Correcta = new Simple("Opcion 2", new Correcta());
+        List<String> opcionesTexto= List.of("Opcion 1", "Opcion 2", "Opcion 3");
+        List<String> posicionesCorrectas= List.of("1", "2");
+
+        respuestas=new RespuestasConcretas();
+        opciones=new Simples(opcionesTexto,posicionesCorrectas);
 
         conPenalidad = new ConPenalidad();
     }
@@ -37,9 +39,13 @@ public class PenalidadTest{
     @Test
     public void test06ConPenalidadAUnaRespuestaConUnaCorrectaSeLeAsignanPuntosCorrectamente() {
         //Arrange
-        RespuestaMock respuesta = new RespuestaMock(Arrays.asList(opcion1Correcta));
 
-        List<Respuesta> respuestas= List.of(respuesta);
+
+        Opciones opcionesRespuesta=opciones.crearCopia(List.of("Opcion 1"));
+        RespuestaMock respuesta = new RespuestaMock(opcionesRespuesta);
+
+        respuestas.agregar(respuesta);
+
         //Act
         conPenalidad.asignarPuntajes(respuestas);
 
@@ -50,9 +56,10 @@ public class PenalidadTest{
     @Test
     public void test07ConPenalidadAUnaRespuestaConMultiplesCorrectasSeLeAsignanPuntosCorrectamente() {
         //Arrange
-        RespuestaMock respuesta = new RespuestaMock(Arrays.asList(opcion1Correcta, opcion2Correcta));
 
-        List<Respuesta> respuestas= List.of(respuesta);
+        Opciones opcionesRespuesta=opciones.crearCopia(List.of("Opcion 1", "Opcion 2"));
+        RespuestaMock respuesta = new RespuestaMock(opcionesRespuesta);
+        respuestas.agregar(respuesta);
         //Act
         conPenalidad.asignarPuntajes(respuestas);
 
@@ -63,10 +70,10 @@ public class PenalidadTest{
     @Test
     public void test08ConPenalidadAUnaRespuestaConAlgunasCorrectasYOtrasIncorrectasSeLeAsignanPuntosCorrectamente() {
         //Arrange
-        RespuestaMock respuesta = new RespuestaMock(Arrays.asList(opcion1Correcta, opcion2));
 
-        List<Respuesta> respuestas= List.of(respuesta);
-
+        Opciones opcionesRespuesta=opciones.crearCopia(List.of("Opcion 1", "Opcion 3"));
+        RespuestaMock respuesta = new RespuestaMock(opcionesRespuesta);
+        respuestas.agregar(respuesta);
         //Act
         conPenalidad.asignarPuntajes(respuestas);
 
@@ -77,8 +84,9 @@ public class PenalidadTest{
     @Test
     public void test09ConPenalidadAUnaRespuestaConVariasIncorrectasSeLeAsignanPuntosCorrectamente() {
         //Arrange
-        RespuestaMock respuesta = new RespuestaMock(Arrays.asList(opcion1, opcion2));
-        List<Respuesta> respuestas= List.of(respuesta);
+        Opciones opcionesRespuesta=opciones.crearCopia(List.of("Opcion 1n't", "Opcion 3"));
+        RespuestaMock respuesta = new RespuestaMock(opcionesRespuesta);
+        respuestas.agregar(respuesta);
 
         //Act
         conPenalidad.asignarPuntajes(respuestas);
@@ -90,9 +98,12 @@ public class PenalidadTest{
     @Test
     public void test10ConPenalidadAUnaListaDeRespuestasUnaCorrectaYUnaIncorrectaSeLesAsignanPuntosCorrectamente() {
         //Arrange
-        RespuestaMock respuesta1 = new RespuestaMock(Arrays.asList(opcion1Correcta));
-        RespuestaMock respuesta2 = new RespuestaMock(Arrays.asList(opcion1));
-        List<Respuesta> respuestas= List.of(respuesta1,respuesta2);
+        Opciones opcionesRespuesta1=opciones.crearCopia(List.of("Opcion 1", "Opcion 2"));
+        Opciones opcionesRespuesta2=opciones.crearCopia(List.of("Opcion 1n't", "Opcion 2n't","Opcion 3"));
+        RespuestaMock respuesta1 = new RespuestaMock(opcionesRespuesta1);
+        RespuestaMock respuesta2 = new RespuestaMock(opcionesRespuesta2);
+        respuestas.agregar(respuesta1);
+        respuestas.agregar(respuesta2);
 
         //Act
         conPenalidad.asignarPuntajes(respuestas);
